# UniFood

./: .gitignore  README.md  docker-compose.yaml  docker-compose.yml
backend/: Dockerfile  alembic.ini  main.py  pyproject.toml
backend/app/: main.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 008bcef16dc4_fill_products_and_categories.py  235f011606cf_add_basic_tables.py  d61db43d1707_add_cart_table.py  db20c5b43460_add_user_table.py
backend/app/api/: deps.py  main.py
backend/app/api/routers/: auth.py  carts.py  products.py  registration.py
backend/app/core/: config.py  db.py  security.py
backend/app/db/: crud.py
backend/app/email-templates/: verification.html
backend/app/models/: __init__.py  cart_items.py  categories.py  categories_products.py  products.py  users.py
backend/app/schemas/: carts.py  items.py  tokens.py  users.py
backend/app/services/: mail.py
backend/docs/: conf.py  index.rst
backend/docs/_build/doctrees/: environment.pickle  index.doctree  modules.doctree
backend/docs/_build/doctrees/docs/source/: app.api.deps.doctree  (+31 more)
backend/docs/_build/doctrees/source/: app.api.deps.doctree  app.api.main.doctree  app.api.routers.auth.doctree  app.api.routers.carts.doctree  app.api.routers.doctree  app.api.routers.products.doctree  app.api.routers.registration.doctree  app.core.config.doctree  app.core.db.doctree  app.core.security.doctree  app.db.crud.doctree  app.db.doctree  app.main.doctree  app.models.base.doctree  app.models.cart_items.doctree  app.models.categories_products.doctree  app.models.products.doctree  app.schemas.carts.doctree  app.schemas.doctree  app.schemas.items.doctree  app.schemas.tokens.doctree  app.schemas.users.doctree  app.services.mail.doctree  modules.doctree
backend/docs/_build/html/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
backend/docs/_build/html/source/: app.api.deps.html  app.api.html  app.api.main.html  app.api.routers.auth.html  app.api.routers.carts.html  app.api.routers.html  app.api.routers.products.html  app.api.routers.registration.html  app.core.config.html  app.core.db.html  app.core.html  app.core.security.html  app.db.crud.html  app.db.html  app.html  app.models.cart_items.html  app.models.categories.html  app.models.html  app.models.products.html  app.schemas.carts.html  app.schemas.html  app.schemas.items.html  app.schemas.messages.html  app.schemas.tokens.html  app.schemas.users.html  app.services.html  app.services.mail.html  modules.html
backend/docs/docs/source/: app.api.routers.registration.rst  app.models.cart_items.rst  app.models.users.rst  app.rst  app.schemas.items.rst
backend/docs/source/: app.core.rst  app.schemas.carts.rst  app.schemas.rst
(+116 files in other folders)
