[tool.poetry]
name = "unifood"
version = "0.1.0"
description = ""
authors = ["SerHappy <iamserhappy@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = "^0.28.0"
asyncpg = "^0.29.0"
asyncpg-stubs = "^0.29.1"
python-decouple = "^3.8"


[tool.poetry.group.dev.dependencies]
mypy = "^1.9.0"
flake8 = "^7.0.0"
black = "^24.3.0"
isort = "^5.13.2"

[tool.mypy]
python_version = "3.12"
files = "*.py"
ignore_missing_imports = true
check_untyped_defs = false
warn_return_any = false
warn_unused_configs = true
warn_unused_ignores = true
exclude = ["(migrations)/$", "manage.py"]
disallow_untyped_calls = false
disallow_untyped_defs = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
