[tool.poetry]
name = "unifood"
version = "0.1.0"
description = ""
authors = ["SerHappy <iamserhappy@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.28.0"
asyncpg = "^0.29.0"
asyncpg-stubs = "^0.29.1"
python-decouple = "^3.8"
python-multipart = "^0.0.9"
python-jose = "^3.3.0"
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
pydantic-settings = "^2.2.1"
sqlalchemy = "^2.0.29"
alembic = "^1.13.1"
jinja2 = "^3.1.3"
bcrypt = "^4.1.2"
aiosmtplib = "^3.0.1"
pydantic = { extras = ["email"], version = "^2.7.0" }


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.1"
sphinx = "^7.2.6"
sphinx-autobuild = "^2024.2.4"
sphinx-rtd-theme = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
